# alpha_sci_auv

./: README.md  genindex.html  index.html  objects.inv  search.html  searchindex.js
alpha_sci_auv/: CMakeLists.txt  package.xml
alpha_sci_bringup/: CMakeLists.txt  package.xml
alpha_sci_bringup/launch/: bringup_helm.launch  bringup_simulation.launch  bringup_simulation_multi_agent.launch
alpha_sci_bringup/launch/include/: cam.launch.xml  control.launch.xml  description.launch.xml  driver.launch.xml  dvl.launch.xml  imu.launch.xml  scanning_sonar.launch.xml
alpha_sci_config/: CMakeLists.txt  package.xml
alpha_sci_config/mission/param/: gps_wpt.yaml  path_local.yaml
alpha_sci_description/: CMakeLists.txt  package.xml
alpha_sci_description/launch/: description.launch
alpha_sci_description/rviz/: config.rviz
alpha_sci_description/urdf/: base.urdf.xacro
alpha_sci_stonefish/: CMakeLists.txt  package.xml
alpha_sci_stonefish/description/: alpha_rise.scn.xacro
alpha_sci_stonefish/launch/: simulation.launch
alpha_sci_stonefish/scenarios/: ocean.scn.xacro  ocean_multi_agent.scn.xacro  tank.scn.xacro
alpha_sci_viz/: CMakeLists.txt  package.xml
specifications/: thruster_t200.html  thruster_t500.html
